# kaiju-config-validator

./: README.md  pyproject.toml  readthedocs.yaml  setup.cfg
.github/workflows/: release.yaml  tests.yaml
docs/source/: conf.py  index.rst
src/kaiju_config_validator/: __init__.py  config_validator.py
tests/: test_config_validator.py
