[metadata]
name = kaiju-config-validator
version = attr: kaiju_config_validator.__version__
description = Application config validation library using JSONSchema
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/violet-black/kaiju-config-validator
author = violetblackdev@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
keywords =

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    kaiju-app
    jsonschema-gen
    fastjsonschema

[options.entry_points]
console_scripts =

[options.packages.find]
where=src

[options.extras_require]
test=
    pytest
    coverage
dev =
    pip-tools
    tox
    mypy
    isort
    black
    pylint
    pre-commit
docs=
    sphinx
    python_docs_theme
    m2r2

[build-system]
requires =
    setuptools
    wheel
build-backend = "setuptools.build_meta"

[flake8]
max-line-length = 125
max-doc-length = 135
select = E
ignore = E704